--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,12 @@
 theme: jekyll-theme-cayman
+
+plugins:
+  - jekyll-relative-links
+  - github-pages
+
+relative_links:
+  enabled: true
+  collections: true
+
+include:
+  - README.md
